<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="country"
                type="dev.restcountries.app.model.Country"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_backdrop_height"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleMarginStart="48dp"
                    app:expandedTitleMarginEnd="64dp">

                <ImageView
                        android:id="@+id/countryFlagImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                        app:theme="@style/ToolBarStyle"
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swipeLayout"
                android:background="@color/colorLightGray"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="14dp">

                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_margin"
                            android:layout_marginEnd="@dimen/card_margin">


                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                            <TextView
                                    style="@style/TextViewStyleHeader"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/general_information"/>

                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image2"
                                        android:src="@drawable/ic_outline_location_city_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:text="@{country.capital}"
                                        android:id="@+id/country_capital"
                                        android:layout_toEndOf="@+id/image2"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image2"
                                        android:layout_below="@+id/country_capital"
                                        android:text="@string/capital"/>

                            </RelativeLayout>

                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image1"
                                        android:src="@drawable/ic_outline_language_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/country_languages"
                                        android:text="@{country.languagesText}"
                                        android:layout_toEndOf="@+id/image1"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image1"
                                        android:layout_below="@+id/country_languages"
                                        android:text="@string/language"/>

                            </RelativeLayout>

                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image10"
                                        android:src="@drawable/ic_outline_people_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/population"
                                        android:text="@{country.populationText}"
                                        android:layout_toEndOf="@+id/image10"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image10"
                                        android:layout_below="@+id/population"
                                        android:text="@string/population"/>

                            </RelativeLayout>


                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image3"
                                        android:src="@drawable/ic_outline_settings_phone_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/calling_code"
                                        android:text="@{country.callingCodesText}"
                                        android:layout_toEndOf="@+id/image3"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image3"
                                        android:layout_below="@+id/calling_code"
                                        android:text="@string/calling_code"/>

                            </RelativeLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/card_margin">


                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                            <TextView
                                    style="@style/TextViewStyleHeader"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/geography"/>

                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image5"
                                        android:src="@drawable/ic_outline_zoom_out_map_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/country_borders"
                                        android:layout_toEndOf="@+id/image5"
                                        android:text="@{country.areaText}"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image5"
                                        android:layout_below="@+id/country_borders"
                                        android:text="@string/area"/>

                            </RelativeLayout>


                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image6"
                                        android:src="@drawable/ic_outline_map_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/country_region"
                                        android:layout_toEndOf="@+id/image6"
                                        android:text="@{country.getRegionAndSubRegionText}"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image6"
                                        android:layout_below="@+id/country_region"
                                        android:text="@string/region_subregion"/>

                            </RelativeLayout>


                            <FrameLayout
                                    android:layout_width="fill_parent"
                                    android:layout_height="240dp">

                                <fragment
                                        android:id="@+id/map"
                                        android:layout_width="fill_parent"
                                        android:layout_height="fill_parent"
                                        android:clickable="false"
                                        class="com.google.android.gms.maps.SupportMapFragment"/>
                            </FrameLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <!-- -->
                    <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/card_margin">


                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                            <TextView
                                    style="@style/TextViewStyleHeader"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/extras"/>

                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image4"
                                        android:src="@drawable/ic_outline_monetization_on_40dp"/>

                                <TextView
                                        android:id="@+id/currency"
                                        android:layout_toEndOf="@+id/image4"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@{country.currenciesText}"
                                        android:textSize="14sp"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image4"
                                        android:layout_below="@+id/currency"
                                        android:text="@string/currency"/>

                            </RelativeLayout>


                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image8"
                                        android:src="@drawable/ic_outline_money_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/countryGini"
                                        android:layout_toEndOf="@+id/image8"
                                        android:text="@{country.giniText}"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image8"
                                        android:layout_below="@+id/countryGini"
                                        android:text="@string/gini"/>

                            </RelativeLayout>

                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image9"
                                        android:src="@drawable/ic_outline_access_time_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/countryTimeZones"
                                        android:layout_toEndOf="@+id/image9"
                                        android:text="@{country.timeZonesText}"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image9"
                                        android:layout_below="@+id/countryTimeZones"
                                        android:text="@string/timezones"/>

                            </RelativeLayout>

                            <RelativeLayout style="@style/InfoLayoutStyle">

                                <ImageView
                                        style="@style/ImageViewStyle1"
                                        android:id="@+id/image7"
                                        android:src="@drawable/ic_outline_language_40dp"/>

                                <TextView
                                        style="@style/TextViewStyle2"
                                        android:id="@+id/wikiLink"
                                        android:layout_toEndOf="@+id/image7"
                                        android:textColor="@color/colorTextLink"
                                        android:text="@{String.format(@string/search_wiki, country.name)}"/>

                                <TextView
                                        style="@style/TextViewStyle1"
                                        android:layout_toEndOf="@+id/image7"
                                        android:layout_below="@+id/wikiLink"
                                        android:text="@string/wiki"/>

                            </RelativeLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>